--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -6,7 +6,7 @@
 {% load custom_filter %}
 <div class="container">
    <div class="border rounded p-4 m-4">
-        <p class="display-4 pl-4 ml-4 btn btn-success rounded-pill">seu carrinho</p>
+        <p class="h4">Seu carrinho</p>
         <hr>
         <table class="table">
             <thead>
@@ -47,9 +47,14 @@
         <div class="m-3 p-3">
             <a href="#" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-success border rounded  col-lg-3 float-right">Sair</a>
         </div>
-   </div>
-</div>
+<table class="table">
+ <a href="/pyment" class="btn btn-success rounded-pill">
+    <p class="h5">Formas de pagamento</p>
+</a>
 
+
+</div>
+</div>
 
 <!-- modal -->
 
@@ -88,7 +93,6 @@
       </div>
     </div>
   </div>
-
 
 
 {% endblock %}
